feat: added roles to register and login
